// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly adds groups 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
          selected={
            Object {
              "id": 1,
              "membersCount": 1,
              "name": "Foo",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`correctly adds users 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
          selected={
            Object {
              "active": true,
              "local": true,
              "login": "john.doe",
              "name": "John doe",
              "selected": true,
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: submitting 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          onSearch={[Function]}
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
